--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,32 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: Jack LeVasseur
+* Created on: Febuary 28,2024
 * This file contains the CSS for index.html
 */
+
+/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
+*/
+.mdl-ripple {
+  background: #0f3cd1;
+  opacity: 0.001;
+}
+
+.mdl-layout__header-row {
+  justify-content: center;
+  padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: rgb(144, 167, 238);
+}
+
+.page-content {
+  color: rgb(50, 58, 201);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+}
